[package]
name = "embedded-gui"
version = "0.0.0"
authors = ["Dániel Buga <bugadani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "backend-embedded-graphics"
]

[dependencies]
object-chain = "0.1"
heapless = "0.6"

[dev-dependencies]
backend-embedded-graphics = {path = "backend-embedded-graphics"}
embedded-graphics = "0.7.0-beta.1"
embedded-graphics-simulator = "0.3.0-alpha.2"
