[package]
name = "backend-embedded-graphics"
version = "0.1.0"
authors = ["Dániel Buga <bugadani@gmail.com>"]
edition = "2018"

[dependencies]
embedded-graphics = "0.7.0-beta.2"
embedded-text = "0.5.0-beta.2"
embedded-gui = { path = ".." }

[features]
ansi = ["embedded-text/ansi"]
default = ["ansi"]
