[package]
name = "backend-embedded-graphics"
version = "0.1.0"
authors = ["Dániel Buga <bugadani@gmail.com>"]
edition = "2018"

[dependencies]
embedded-graphics = "0.7.0"
embedded-text = { version = "0.5.0-beta.4", features = ["plugin"] }
embedded-gui = { path = ".." }
heapless = "0.7"
az = "1.1"
object-chain = "0.1"

[features]
ansi = ["embedded-text/ansi"]
default = ["ansi"]
